Archive2/ce/7d2ce732969f3c/output
main.cpp:5:16: error: too many decimal points in number
     <IPAddress>123.45.67</IPAddress>
                ^
main.cpp:8:27: warning: missing terminating ' character
     <serialNo>manufacturer's serial number</serialNo>
                           ^
main.cpp:8:5: error: missing terminating ' character
     <serialNo>manufacturer's serial number</serialNo>
     ^
main.cpp:1:1: error: expected unqualified-id before '<' token
 <parent>
 ^
